// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifGrid> group it should show items when the image are loaded with the useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    one punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="image title"
      url="https://localhost/some.jpg"
    />
  </div>
</Fragment>
`;

exports[`<GifGrid> group should render ok 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    one punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
